# Hash-touch

./: .env  .gitignore  components.json  eslint.config.js  hashtouch-key.keystore  index.html  package.json  pnpm-lock.yaml  tmpclaude-043d-cwd  tsconfig.app.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_state.rs  cart_store.rs  category.rs  charges.rs  device.rs  gift_card.rs  kds_ticket.rs  location.rs  mod.rs  payment_method.rs  printer.rs  product.rs  product_group.rs  product_group_category.rs  product_tag.rs  product_tag_group.rs  product_tag_group_mapping.rs  prouct_combo.rs  queue_token.rs  resync.rs  setup.rs  terminal.rs  ticket.rs  transaction_type.rs  websocket.rs  work_shift.rs  workday.rs
src-tauri/src/db/: migrate.rs
src-tauri/src/db/migrations/: 0000_bored_king_bedlam.sql  0000_curly_wallow.sql  0000_last_landau.sql  0000_lying_violations.sql  0000_melodic_lorna_dane.sql  0000_mighty_ma_gnuci.sql  0000_previous_mandarin.sql  0000_rainy_slayback.sql  0000_smiling_vindicator.sql  0000_spooky_the_watchers.sql  0000_tricky_nico_minoru.sql  0000_vengeful_lady_bullseye.sql  0001_past_whizzer.sql  0001_powerful_wildside.sql  0001_quiet_nighthawk.sql  0001_red_black_cat.sql  0001_tricky_the_hood.sql  0002_black_blue_blade.sql  0002_odd_joseph.sql  0002_panoramic_nitro.sql  0003_dusty_kat_farrell.sql  0003_orange_ink.sql  0004_free_peter_parker.sql  0004_married_tombstone.sql  0005_left_reptil.sql
src-tauri/src/db/models/: app_state.rs  app_state_repo.rs  category.rs  category_repo.rs  charges.rs  charges_repo.rs  device.rs  device_repo.rs  kds_ticket.rs  kds_ticket_repo.rs  location.rs  mod.rs  (+28 more)
src-tauri/src/printer/: escpos.rs  mod.rs  service.rs
src-tauri/src/websocket/: event_bus.rs  mod.rs  printer.rs  ws_routes.rs
(+345 files in other folders)
