[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.19"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
chrono = "0.4"
local-ip-address = "0.6"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
