[package]
name = "app"
version = "0.1.0"
description = "Hash-One HashTouch Application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = "1.0.228"
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.8.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.19"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
chrono = "0.4"
local-ip-address = "0.6"
reqwest = {  version = "0.12.7",  default-features = false, features = ["json", "blocking", "rustls-tls-native-roots"] }
base64 = "0.22"
